# boss-shujuzonglan1

./: .env.example  .gitignore  SKILL.md  package-lock.json  package.json  proxy.ts  tsconfig.json
app/: globals.css  layout.tsx
desktop-tauri/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
desktop-tauri/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: desktop_server.rs  main.rs
lib/: mobile-api-client.ts  mobile-auth.ts  mobile-dashboard.ts  mobile-monthly-stats-service.ts  mobile-open-api-proxy.ts  mobile-work-boards.ts  mongodb.ts  report-cache.ts
logo-原型图/: login.html
models/: daily-point-detail.ts  shop.ts
prototype-archive/: README.md  colors_and_type.css  logo-exploration.html
tests/: bar-chart-option.test.ts  city-opened-point-summary.test.ts  daily-point-all-amount-trend-query.test.ts  daily-point-derived.test.ts  daily-point-month-scope.test.ts  daily-point-shop-matcher.test.ts  dashboard-chart-sections-removal.test.ts  dashboard-header-copy.test.ts  dashboard-header-layout.test.ts  dashboard-header-style.test.ts  metric-grid.test.ts  mobile-auth.test.ts  mobile-dashboard-data.test.ts  mobile-layout-source.test.ts  mobile-open-api-proxy.test.ts  mobile-open-api-routes.test.ts  mobile-route-protection.test.ts  mobile-sealos-api-base.test.ts  mobile-stats-api-source.test.ts  mobile-work-board-layout.test.ts  mobile-work-boards.test.ts  mongodb-connection-source.test.ts  monthly-point-summary.test.ts  (+17 more)
(+212 files in other folders)
